# advent-of-code

./: .gitignore  bitset_demo.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day19_2.py  day19_3.py  day2.py  day20.py  day20_2.py  day21.py  day22.py  day23.py  day24.py  day25.py  day_23_3_hash_and_links.py  management.py  otqdm.py  pyproject.toml  template.py  utils.py
2018/: day01.py  day06.py  day07.py
2019/: day05.py  day06.py  day07.py  day08.py  day10.py  day11.py  day12.py  day13.py  day14.py  day16.py  day19.py  day20.py  day24.py  day25.py  management.py
2020/: day01.py  day03.py  day04.py  day08.py  day08_2.py  day09.py  day11.py  day12.py  day15.py  day16.py  day18.py  day18_2.py  day19.py  day19_3.py  day20b.py  day21.py  day23_2_sparse.py  day24.py  day25.py
2021/: day01.py
2022/: bitset_demo.py  day01.py  day03.py  day04.py  day05.py  day08.py  day11.py  day14.py  day15.py  day18.py
2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
difficulty/: rankings.csv  rankings.py
parallel_experiments/: trampoline_demo.py
utils/: UnionFind.py  __init__.py  advent.py  functools2.py  (+9 more)
