[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Peter (Rocky) Villano <peter@saej.in>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "*"
numpy = "*"
tqdm = "*"
trio = "*"
trio-parallel = "*"
z3-solver = "*"
black = "*"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120