[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter (Rocky) Villano",email = "peter@saej.in"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests",
    "numpy",
    "tqdm",
    "trio",
    "trio-parallel",
    "z3-solver",
    "graphviz",
    "lxml"
]

[dependency-groups]
dev = [
    "black"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
