[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter (Rocky) Villano",email = "peter@saej.in"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests",
    "numpy",
    "tqdm",
    "trio",
    "trio-parallel",
    "z3-solver",
    "graphviz",
    "lxml",
    "scipy>=1.16.3",
    "scipy-stubs~=1.16.3",
]

[dependency-groups]
dev = [
    "black"
]
